--- a/Single price grid component/index.html
+++ b/Single price grid component/index.html
@@ -16,22 +16,22 @@
 
 <body>
     <div style="display: box" class="priceCard">
-        <div class="grid-container">
-            <div class="header">
+        <main class="grid-container">
+            <section class="header">
                 <h2 class="join">Join our community</h2>
                 <h3 class="guarantee">30-day, hassle-free money back guarantee</h3>
                 <p class="paragraph">Gain access to our full library of tutorials along with expert code reviews.
                     Perfect for any developers who are serious about honing their skills.</p>
-            </div>
-            <div class="left">
+            </section>
+            <section class="left">
                 <h3 class="monthly">Monthly Subscription</h3>
                 <span><b><sub>&dollar;29</sub></b> per month</span>
                 <p>Full access for less than &dollar;1 a day</p>
                 <button>
                     <b>Sign Up</b>
                 </button>
-            </div>
-            <div class="right">
+            </section>
+            <section class="right">
                 <h3 class="monthly">Why Us</h3>
                 <ul class="no-bullets">
                     <li>Tutorials by industry experts</li>
@@ -42,8 +42,8 @@
                     <li>Flashcard decks</li>
                     <li>New videos every week</li>
                 </ul>
-            </div>
-        </div>
+            </section>
+        </main>
     </div>
     <footer id="footer">
         <p class="attribution">
