--- a/four-card-feature-section/index.html
+++ b/four-card-feature-section/index.html
@@ -28,22 +28,22 @@
     <article class="card card1">
       <h4>Supervisor</h4>
       <p>Monitors activity to identify project roadblocks</p>
-      <img src="/images/icon-supervisor.svg" alt="Magnifying glass">
+      <img src="./images/icon-supervisor.svg" alt="Magnifying glass">
     </article>
     <article class="card card2">
       <h4>Team Builder</h4>
       <p>Scans our talent network to create the optimal team for your project</p>
-      <img src="/images/icon-team-builder.svg" alt="House on document">
+      <img src="./images/icon-team-builder.svg" alt="House on document">
     </article>
     <article class="card card3">
       <h4>Karma</h4>
       <p>Regularly evaluates our talent to ensure quality</p>
-      <img src="/images/icon-karma.svg" alt="Light bulb">
+      <img src="./images/icon-karma.svg" alt="Light bulb">
     </article>
     <article class="card card4">
       <h4>Calculator</h4>
       <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src="/images/icon-calculator.svg" alt="Computer monitor">
+      <img src="./images/icon-calculator.svg" alt="Computer monitor">
     </article>
   </div>
 
