--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | NFT preview card component</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
 
@@ -17,12 +24,18 @@
     <img class="main-image" src="./images/image-equilibrium.jpg">
     <h4 class="heading hover-effect">Equilibrium #3429</h4>
     <p class="subject">Our Equilibrium collection promotes balance and calm.</p>
-    <p class="price-info"><span class="price">
-        <img src="./images/icon-ethereum.svg"> 0.041 ETH</span>
-      <span class="time-limit">
-        <img src="./images/icon-clock.svg"> 3 days left</span>
+    <p class="price-info-line">
+    <div class="price">
+      <img src="./images/icon-ethereum.svg"> 0.041 ETH
+    </div>
+    <div class="time-limit">
+      <img src="./images/icon-clock.svg"> 3 days left
+    </div>
     </p>
-    <p class="creator"><img src="./images/image-avatar.png"> Creation of <span class="hover-effect">Jules Wyvern</span>
+    <p class="creator"><img class="creator-pic" src=" ./images/image-avatar.png">
+      Creation of <span class="hover-effect">Jules
+        Wyvern
+      </span>
     </p>
   </article>
 </body>
